# eval-hub-contrib

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md
.agentready/: assessment-20260212-110203.json  assessment-latest.json  report-20260212-110203.html  report-20260212-110203.md  report-latest.html  report-latest.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: build-images.yml  test-clear.yml  test-deepeval.yml  test-guidellm.yml  test-inspect.yml  test-lighteval.yml  test-mteb.yml  test-nemo-guardrails.yml  test-ragas.yml
adapters/agentdojo/: .dockerignore  Containerfile  README.md  main.py  provider.yaml  pyproject.toml  requirements.txt  todo.org
adapters/agentdojo/demo/: 00-namespace.yaml  01-evalhub-config.yaml  01-operator-crds.sh  02-agentdojo-provider.yaml  03-evalhub.yaml  03a-rbac.yaml  04-build-and-push-adapter.sh  05-secret.yaml.tpl  README.md
adapters/agentdojo/meta/: job.json
adapters/clear/: .gitignore  Containerfile  README.md  main.py  provider.yaml  requirements.txt  upload_clear_results_to_mlflow.py
adapters/deepeval/: .dockerignore  Containerfile  README.md  main.py  provider.yaml  requirements.txt
adapters/guidellm/: .dockerignore  Containerfile  README.md  main.py  requirements.txt
adapters/inspect/: Containerfile  README.md  _benchmarks.py  _bloom.py  _execution.py  _results.py  _routing.py  main.py  provider.yaml  requirements.txt
adapters/lighteval/: .dockerignore  Containerfile  README.md  main.py  requirements.txt
adapters/mteb/: main.py  (+1 more)
(+82 files in other folders)
